--- a/analytics-demo/package.json
+++ b/analytics-demo/package.json
@@ -7,6 +7,7 @@
     "start": "vite",
     "dev": "vite",
     "build": "vite build",
+    "preview": "vite preview",
     "serve": "vite preview"
   },
   "license": "MIT",
@@ -15,6 +16,7 @@
     "solid-js": "^1.9.3"
   },
   "devDependencies": {
+    "@types/node": "^22.10.5",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
